# stableflow

./: Anchor.toml  LICENSE  README.md  package-lock.json  package.json
programs/stableflow/: Cargo.toml
programs/stableflow/src/: constants.rs  error.rs  lib.rs
programs/stableflow/src/instructions/: add_external_protocol.rs  allocate_to_protocol.rs  claim_reward.rs  deposit.rs  init_config.rs  init_user.rs  init_vault.rs  initialize.rs  mod.rs  stake.rs  withdraw.rs
programs/stableflow/src/instructions/raydium/: cpmm_deposit.rs  create_cpmm_pool.rs  deposit.rs  initialize.rs  lock_cpmm_pool.rs  mod.rs  swap_base_in.rs  swap_base_out.rs  withdraw.rs
programs/stableflow/src/state/: config.rs  externa_protocol.rs  mod.rs  protocol.rs  user.rs  vault.rs
tests/: stableflow.ts
