[package]
name = "stableflow"
version = "0.1.0"
description = "Stable coin aggregator"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stableflow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
###devnet = ["raydium-amm-cpi/devnet", "raydium-cpmm-cpi/devnet"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = {version = "0.30.1"}
raydium-amm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-amm-cpi", branch = "anchor-0.30.1" }
raydium-cpmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-cpmm-cpi", branch = "anchor-0.30.1" }
raydium-locking-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-locking-cpi", branch = "anchor-0.30.1" }
constant-product-curve = { git="https://github.com/deanmlittle/constant-product-curve.git" }
